# substrate-api-client

./: Cargo.toml
src/: lib.rs
tutorials/api-client-tutorial/: Cargo.toml
