[package]
name = "api-client-tutorial"
version = "0.1.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
substrate-api-client = { path = "../.." }
codec = { package = "parity-scale-codec", features = ["derive"], version = "1.0.0", default-features = false }

#[dependencies.primitives]
#path = "../../primitives"
#default-features=false
#package = "substrate-primitives"

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate'
rev = 'd00d3137246bdb7d63fb6ef206957c539685322b'
package = "substrate-primitives"
default-features=false

[dependencies.keyring]
git = 'https://github.com/paritytech/substrate'
rev = 'd00d3137246bdb7d63fb6ef206957c539685322b'
package = "substrate-keyring"

#[patch."https://github.com/paritytech/substrate"]
#substrate-primitives = { package = "substrate-primitives", path = "../../primitives", default-features = false }
